--- a/charts/mqtt/values.yaml
+++ b/charts/mqtt/values.yaml
@@ -42,3 +42,10 @@ addons:
     service:
       type: ClusterIP
       port: 8080
+    resources:
+      requests:
+        memory: 600Mi
+        cpu: 200m
+      limits:
+        memory: 600Mi
+        cpu: 200m
