--- a/charts/nextcloud/templates/httpd/httpd-config.yaml
+++ b/charts/nextcloud/templates/httpd/httpd-config.yaml
@@ -2,8 +2,10 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: nginx
+  name: httpd
 data:
   nextcloud.conf: |-
     {{- tpl (.Files.Get "files/nextcloud.conf.tpl") . | nindent 4 }}
+  httpd.conf: |-
+    {{- tpl (.Files.Get "files/httpd.conf.tpl") . | nindent 4 }}
 {{- end }}
