--- a/charts/nextcloud/templates/nextcloud/nextcloud-ingress.yaml
+++ b/charts/nextcloud/templates/nextcloud/nextcloud-ingress.yaml
@@ -54,6 +54,7 @@ spec:
     - host: {{ .Values.nextcloud.host }}
       http:
         paths:
+          {{- if .Values.nginx.enabled }}
           - path: /
             pathType: Prefix
             backend:
@@ -61,6 +62,16 @@ spec:
                 name: {{ template "nextcloud.fullname" . }}-nginx
                 port:
                   name: "nginx"
+          {{- end }}
+          {{- if .Values.httpd.enabled }}
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: {{ template "nextcloud.fullname" . }}-httpd
+                port:
+                  name: "httpd"
+          {{- end }}
           {{- if .Values.whiteboard.enabled }}
           - path: /whiteboard
             pathType: Prefix
