--- a/charts/nextcloud/templates/httpd/httpd-deployment.yaml
+++ b/charts/nextcloud/templates/httpd/httpd-deployment.yaml
@@ -32,16 +32,16 @@ spec:
         name: httpd
         ports:
           - containerPort: 8000
-            protocol: TCP
-            name: "httpd-tcp"
-          - containerPort: 8000
-            protocol: UPD
-            name: "httpd-udp"
+            name: "httpd"
         volumeMounts:
           {{- include "nextcloud.volumeMounts" . | trim | nindent 10 }}
           - mountPath: /usr/local/apache2/conf/nextcloud.conf
             name: httpd
             subPath: nextcloud.conf
+            readOnly: true
+          - mountPath: /usr/local/apache2/conf/httpd.conf
+            name: httpd
+            subPath: httpd.conf
             readOnly: true
       volumes:
       - name: nextcloud-data
