change ingress httpd config

--- a/charts/nextcloud/templates/nextcloud/nextcloud-ingress.yaml
+++ b/charts/nextcloud/templates/nextcloud/nextcloud-ingress.yaml
@@ -70,7 +70,7 @@ spec:
               service:
                 name: {{ template "nextcloud.fullname" . }}-httpd
                 port:
-                  name: "httpd-tcp"
+                  name: "httpd"
           {{- end }}
           {{- if .Values.whiteboard.enabled }}
           - path: /whiteboard
