--- a/charts/servarr/templates/lidarr/lidarr-deployment.yaml
+++ b/charts/servarr/templates/lidarr/lidarr-deployment.yaml
@@ -61,6 +61,9 @@ spec:
             {{- toYaml .Values.lidarr.livenessProbe | nindent 12 }}
           readinessProbe:
             {{- toYaml .Values.lidarr.readinessProbe | nindent 12 }}
+          resources:
+            {{- toYaml .| nindent 12 }}
+          {{- end }}
           volumeMounts:
             - name: lidarr-config
               mountPath: /config
