--- a/charts/servarr/templates/radarr/radarr-deployment.yaml
+++ b/charts/servarr/templates/radarr/radarr-deployment.yaml
@@ -61,6 +61,9 @@ spec:
             {{- toYaml .Values.radarr.livenessProbe | nindent 12 }}
           readinessProbe:
             {{- toYaml .Values.radarr.readinessProbe | nindent 12 }}
+          resources:
+            {{- toYaml .| nindent 12 }}
+          {{- end }}
           volumeMounts:
             - name: radarr-config
               mountPath: /config
