--- a/charts/servarr/templates/recyclarr/recyclarr-deployment.yaml
+++ b/charts/servarr/templates/recyclarr/recyclarr-deployment.yaml
@@ -41,6 +41,9 @@ spec:
               value: "true"
             - name: CRON_SCHEDULE
               value: {{ .Values.recyclarr.cron | quote }}
+          resources:
+            {{- toYaml .| nindent 12 }}
+          {{- end }}
           volumeMounts:
             - name: recyclarr-config
               mountPath: /config
