--- a/charts/mqtt/templates/zigbee2mqtt-configmap.yaml
+++ b/charts/mqtt/templates/zigbee2mqtt-configmap.yaml
@@ -6,17 +6,26 @@ metadata:
 data:
   configuration.yaml: |
     # Home Assistant integration (MQTT discovery)
-    homeassistant: {{ .Values.addons.zigbee2mqtt.homeassistant }}
-    {{- if .Values.addons.zigbee2mqtt.homeassistant }}
-    discovery_topic: 'homeassistant'
-    status_topic: 'hass/status'
-    {{- end }}
+    homeassistant:
+      enabled: {{ .Values.addons.zigbee2mqtt.homeassistant }}
+      {{- if .Values.addons.zigbee2mqtt.homeassistant }}
+      status: 'hass/status'
+      {{- end }}
 
     frontend:
-      port: 8080
+      enabled: true
+      port: {{ .Values.addons.zigbee2mqtt.service.port }}
 
     # allow new devices to join
     permit_join: true
+
+    advanced:
+      homeassistant_legacy_entity_attributes: false
+      homeassistant_legacy_triggers: false
+      legacy_api: false
+      legacy_availability_payload: false
+    device_options:
+      legacy: false
 
     # MQTT settings
     mqtt:
@@ -27,7 +36,7 @@ data:
       user: {{ .Values.user }}
       password: {{ .Values.password }}
 
-      # Serial settings
-      serial:
-        port: {{ .Values.addons.zigbee2mqtt.zigbee }}
+    # Serial settings
+    serial:
+      port: {{ .Values.addons.zigbee2mqtt.zigbee }}
 {{- end }}
