--- a/charts/mqtt/templates/zigbee2mqtt-deployment.yaml
+++ b/charts/mqtt/templates/zigbee2mqtt-deployment.yaml
@@ -36,7 +36,7 @@ spec:
             failureThreshold: 5
             httpGet:
               path: /
-              port: web
+              port: main
             initialDelaySeconds: 60
             timeoutSeconds: 10
             periodSeconds: 30
