--- a/charts/mqtt/templates/zigbee2mqtt-configmap.yaml
+++ b/charts/mqtt/templates/zigbee2mqtt-configmap.yaml
@@ -5,29 +5,33 @@ metadata:
   name: {{ include "mosquitto.fullname" . }}-zigbee2mqtt
 data:
   configuration.yaml: |
-    # Home Assistant integration (MQTT discovery)
-    homeassistant: {{ .Values.addons.zigbee2mqtt.homeassistant }}
-    {{- if .Values.addons.zigbee2mqtt.homeassistant }}
-    discovery_topic: 'homeassistant'
-    status_topic: 'hass/status'
-    {{- end }}
+    homeassistant:
+      enabled: {{ .Values.addons.zigbee2mqtt.homeassistant }}
+      {{- if .Values.addons.zigbee2mqtt.homeassistant }}
+      status: 'hass/status'
+      {{- end }}
 
     frontend:
-      port: 8080
+      enabled: true
+      port: {{ .Values.addons.zigbee2mqtt.service.port }}
 
-    # allow new devices to join
     permit_join: true
 
-    # MQTT settings
+    advanced:
+      homeassistant_legacy_entity_attributes: false
+      homeassistant_legacy_triggers: false
+      legacy_api: false
+      legacy_availability_payload: false
+    device_options:
+      legacy: false
+
     mqtt:
-      # MQTT base topic for zigbee2mqtt MQTT messages
       base_topic: zigbee2mqtt
-      # MQTT server URL
       server: 'mqtt://{{ template "mosquitto.fullname" . }}'
       user: {{ .Values.user }}
       password: {{ .Values.password }}
 
-      # Serial settings
-      serial:
-        port: {{ .Values.addons.zigbee2mqtt.zigbee }}
+    serial:
+      port: {{ .Values.addons.zigbee2mqtt.port }}
+      adapter: {{ .Values.addons.zigbee2mqtt.adapter }}
 {{- end }}
