--- a/charts/mqtt/templates/mqtt-deployment.yaml
+++ b/charts/mqtt/templates/mqtt-deployment.yaml
@@ -31,6 +31,9 @@ spec:
           name: mosquitto
         - mountPath: /scripts
           name: script
+        - mountPath: /tmp/mosquitto.conf
+          subPath: mosquitto.conf
+          name: configmap
       containers:
       - name: {{ .Chart.Name }}
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
@@ -54,9 +57,9 @@ spec:
         volumeMounts:
         - mountPath: /mosquitto
           name: mosquitto
-        - mountPath: /mosquitto/config/mosquitto.conf
-          subPath: mosquitto.conf
-          name: configmap
+        # - mountPath: /mosquitto/config/mosquitto.conf
+        #   subPath: mosquitto.conf
+        #   name: configmap
         lifecycle:
           postStart:
             exec:
