--- a/charts/mqtt/templates/zigbee2mqtt-deployment.yaml
+++ b/charts/mqtt/templates/zigbee2mqtt-deployment.yaml
@@ -49,7 +49,7 @@ spec:
               mountPath: {{ .Values.addons.zigbee2mqtt.zigbee }}
           {{- with .Values.addons.zigbee2mqtt.resources }}
           resources:
-            {{ . | nindent 12 }}
+            {{ toYaml . | nindent 12 }}
           {{- end }}
       volumes:
         - name: configmap
