--- a/charts/mqtt/templates/zigbee2mqtt-configmap.yaml
+++ b/charts/mqtt/templates/zigbee2mqtt-configmap.yaml
@@ -5,7 +5,6 @@ metadata:
   name: {{ include "mosquitto.fullname" . }}-zigbee2mqtt
 data:
   configuration.yaml: |
-    # Home Assistant integration (MQTT discovery)
     homeassistant:
       enabled: {{ .Values.addons.zigbee2mqtt.homeassistant }}
       {{- if .Values.addons.zigbee2mqtt.homeassistant }}
@@ -16,7 +15,6 @@ data:
       enabled: true
       port: {{ .Values.addons.zigbee2mqtt.service.port }}
 
-    # allow new devices to join
     permit_join: true
 
     advanced:
@@ -27,16 +25,13 @@ data:
     device_options:
       legacy: false
 
-    # MQTT settings
     mqtt:
-      # MQTT base topic for zigbee2mqtt MQTT messages
       base_topic: zigbee2mqtt
-      # MQTT server URL
       server: 'mqtt://{{ template "mosquitto.fullname" . }}'
       user: {{ .Values.user }}
       password: {{ .Values.password }}
 
-    # Serial settings
     serial:
-      port: {{ .Values.addons.zigbee2mqtt.zigbee }}
+      port: {{ .Values.addons.zigbee2mqtt.port }}
+      adapter: {{ .Values.addons.zigbee2mqtt.adapter }}
 {{- end }}
