--- a/charts/mqtt/templates/mqtt-deployment.yaml
+++ b/charts/mqtt/templates/mqtt-deployment.yaml
@@ -18,6 +18,10 @@ spec:
         app.kubernetes.io/component: mqtt
     spec:
       serviceAccountName: {{ include "mosquitto.serviceAccountName" . }}
+      securityContext:
+        runAsUser: 1883
+        runAsGroup: 1883
+        fsGroup: 1883
       initContainers:
       - name: "init-volumes"
         image: "busybox"
@@ -27,6 +31,9 @@ spec:
           name: mosquitto
         - mountPath: /scripts
           name: script
+        - mountPath: /tmp/mosquitto.conf
+          subPath: mosquitto.conf
+          name: configmap
       containers:
       - name: {{ .Chart.Name }}
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
@@ -50,9 +57,9 @@ spec:
         volumeMounts:
         - mountPath: /mosquitto
           name: mosquitto
-        - mountPath: /mosquitto/config/mosquitto.conf
-          subPath: mosquitto.conf
-          name: configmap
+        # - mountPath: /mosquitto/config/mosquitto.conf
+        #   subPath: mosquitto.conf
+        #   name: configmap
         lifecycle:
           postStart:
             exec:
