--- a/charts/mqtt/templates/mqtt-script-init.yaml
+++ b/charts/mqtt/templates/mqtt-script-init.yaml
@@ -13,6 +13,10 @@ data:
     echo "mkdir /mosquitto/configinc"
     mkdir /mosquitto/configinc
 
+    cp /tmp/mosquitto.conf /mosquitto/config/mosquitto.conf
+
     echo "password_file /mosquitto/configinc/passwordfile" > /mosquitto/configinc/passwordconfig.conf
+
+    chown -R 1883:1883 /mosquitto
 
     echo "Fin de l'initialisation de mqtt"
