--- a/charts/mqtt/templates/mqtt-deployment.yaml
+++ b/charts/mqtt/templates/mqtt-deployment.yaml
@@ -31,9 +31,6 @@ spec:
           name: mosquitto
         - mountPath: /scripts
           name: script
-        - mountPath: /tmp/mosquitto.conf
-          subPath: mosquitto.conf
-          name: configmap
       containers:
       - name: {{ .Chart.Name }}
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
@@ -45,9 +42,6 @@ spec:
         - name: "ws"
           containerPort: 9001
           protocol: TCP
-        env:
-          - name: TZ
-            value: {{ .Values.timezone }}
         livenessProbe:
           {{- toYaml .Values.livenessProbe | nindent 12 }}
         readinessProbe:
@@ -57,9 +51,9 @@ spec:
         volumeMounts:
         - mountPath: /mosquitto
           name: mosquitto
-        # - mountPath: /mosquitto/config/mosquitto.conf
-        #   subPath: mosquitto.conf
-        #   name: configmap
+        - mountPath: /mosquitto/config/mosquitto.conf
+          subPath: mosquitto.conf
+          name: configmap
         lifecycle:
           postStart:
             exec:
